# anycode

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  agents.md  config.example.toml
crates/anycode-bin/: Cargo.toml
crates/anycode-bin/src/: main.rs
crates/anycode-core/: Cargo.toml
crates/anycode-core/src/: config.rs  error.rs  lib.rs
crates/anycode-core/src/control/: bridge.rs
crates/anycode-core/src/db/: models.rs  repo.rs
crates/anycode-core/src/infra/: docker.rs  ecs.rs  mod.rs  provider.rs  traits.rs
crates/anycode-core/src/messaging/: mod.rs  slack.rs  telegram.rs  traits.rs
crates/anycode-core/src/sandbox/: acpx.rs  agent_client.rs  client.rs  mod.rs  stream.rs  types.rs
crates/anycode-core/src/session/: manager.rs
crates/anycode-setup/: Cargo.toml
crates/anycode-setup/src/: app.rs  config_gen.rs  data.rs  main.rs  runner.rs
crates/anycode-setup/src/steps/: agents.rs  build.rs  done.rs  messaging.rs  mod.rs  prerequisites.rs  review.rs  sandbox.rs  welcome.rs
crates/anycode-setup/src/widgets/: mod.rs  multi_select.rs  select_list.rs  text_input.rs
docker/: Dockerfile.agent  entrypoint.sh
migrations/: 001_initial.sql  002_string_ids.sql
