[package]
name = "anycode-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "anycode"
path = "src/main.rs"

[dependencies]
anycode-core = { path = "../anycode-core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
