[package]
name = "anycode-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.17", features = ["macros"] }
bollard = "0.19"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
reqwest-eventsource = "0.6"
tokio-rusqlite = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
async-trait = "0.1"
futures = "0.3"
regex-lite = "0.1"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
aws-config = "1"
aws-sdk-ecs = "1"
aws-sdk-ec2 = "1"
aws-sdk-cloudwatchlogs = "1"

[dev-dependencies]
tempfile = "3"
